<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorDialog">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvDalogGameOver"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorTextButton"
        android:textSize="@dimen/tvSizeSA"
        android:fontFamily="sans-serif-black"
        android:gravity="center">
    </TextView>

    <TextView
        android:id="@+id/tvScoreMax_Dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40sp"
        android:text="@string/tvDalogmaxScore"
        android:layout_marginTop="20dp"
        android:textColor="@color/colorTextButton"
        android:textSize="@dimen/textDialogGOscore"
        android:fontFamily="sans-serif-black"
        android:gravity="center">
    </TextView>

    <TextView
        android:id="@+id/tvScore_Dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40sp"
        android:text="@string/tvDalogScore"
        android:layout_marginTop="20dp"
        android:textColor="@color/colorTextButton"
        android:textSize="@dimen/textDialogGOscore"
        android:fontFamily="sans-serif-black"
        android:gravity="center">
    </TextView>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/btnOK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_static"
            android:text="@string/dialogGO_OK"
            android:textColor="@color/colorTextButton"/>

    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="20dp"/>





</LinearLayout>