<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorDialog">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvDialogTA"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorTextButton"
        android:textSize="@dimen/textDialogTA"
        android:fontFamily="sans-serif-black"
        android:gravity="center">
    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/btnYes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_static"
            android:text="@string/dialogTA_OK"
            android:textColor="@color/colorTextButton"/>

        <Button
            android:id="@+id/btnNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:background="@drawable/button_static"
            android:text="@string/dialogTA_NO"
            android:textColor="@color/colorTextButton"/>

    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="20dp"/>





</LinearLayout>